- Fixed bug #27640 memory leak of registered_zend_ini_directives  (Dmitry)